<FIX> Desired alignment and layout fixed

--- a/marketing-app/src/Pages/ApiKeyPage/ApiKeyPage.css
+++ b/marketing-app/src/Pages/ApiKeyPage/ApiKeyPage.css
@@ -1,5 +1,3 @@
-/* Flexbox */
-.api-key-page-container,
 .api-key-page-input-wrapper{
 	display: flex;
 	flex-direction: column;
